--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 
 <h1>This is not hte heading you're looking for</h1>
-<!--<p>This is a paragraph.</p> -->
+<!--<p>This is a paragraph</p> -->
 
 </body>
 </html>
